k8s/app.yaml
# ---------------------------
# DJANGO DEPLOYMENT
# ---------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photoalbum-git
  labels:
    app: photoalbum-git
  annotations:
    image.openshift.io/triggers: |
      [{"from":{"kind":"ImageStreamTag","name":"photoalbum-git:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"photoalbum-git\")].image"}]
spec:
  replicas: 1
  selector:
    matchLabels:
      app: photoalbum-git
  template:
    metadata:
      labels:
        app: photoalbum-git
        deployment: photoalbum-git
    spec:
      containers:
      - name: photoalbum-git
        image: image-registry.openshift-image-registry.svc:5000/skicpausz-dev/photoalbum-git:latest
        
        command: ["/bin/sh", "-c"]
        args:
          - |
            python manage.py migrate &&
            python manage.py createsuperuser --noinput || true &&
            gunicorn config.wsgi:application --bind 0.0.0.0:8080

        ports:
        - containerPort: 8080
---
# ---------------------------
# DJANGO SERVICE
# ---------------------------
apiVersion: v1
kind: Service
metadata:
  name: photoalbum-git
spec:
  selector:
    app: photoalbum-git
    deployment: photoalbum-git
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080

---
# ---------------------------
# ROUTE (PUBLIC ACCESS)
# ---------------------------
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: photoalbum-git
spec:
  to:
    kind: Service
    name: photoalbum-git
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge

---
# ---------------------------
# POSTGRES DEPLOYMENT
# ---------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: registry.redhat.io/rhel9/postgresql-15
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/pgsql/data
          name: data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: postgres-data-pvc

---
# ---------------------------
# POSTGRES SERVICE
# ---------------------------
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
